Limpieza parte regresión

--- a/hito3/informe.ipynb
+++ b/hito3/informe.ipynb
@@ -153,10 +153,9 @@
    "source": [
     "## III. Preguntas de interés\n",
     "Preguntas a que se podrían resolver usando la minería de datos:\n",
-    "1. ¿Es posible predecir el puntaje de corte esperado para el próximo año a partir de las tendencias históricas?\n",
-    "2. ¿Qué factores determinan el arancel de una carrera?\n",
-    "3. ¿Existen universidades con características comunes? \n",
-    "4. ¿Se pueden agrupar instituciones/carreras usando estas características? ¿Acaso tienen perfiles similares de aranceles y puntajes de ingreso?\n",
+    "1. ¿Se puede predecir la participación femenina?\n",
+    "2. ¿Existen universidades con características comunes? \n",
+    "3. ¿Se pueden agrupar instituciones/carreras usando estas características? ¿Acaso tienen perfiles similares de aranceles y puntajes de ingreso?\n",
     "\n",
     "Resulta interesante construir un predictor de puntajes de corte creado con datos reales, y no con simples estimaciones, o analizar el perfil de las instituciones de acuerdo a las características que se puedan extraer a partir de los atributos de la base de datos, ya que mediante simple análisis visual de las bases no siempre es directa la relación entre características de miles de datos disponibles.\n",
     "\n",
@@ -199,7 +198,29 @@
    "source": [
     "## V. Experimentación\n",
     "\n",
-    "### Predicción de puntaje de corte\n",
+    "### Predicción participación femenina\n",
+    "\n",
+    "#### * Limpieza\n",
+    "Como se indicó anteriormente, la gran cantidad y variedad de carreras genera una dificultad para analizar los datos, por lo tanto se decide solo considerar las carreras del área de ingeniería pues se han hecho esfuerzos a nivel nacional por incrementar la participación femenina en estas carreras.\n",
+    "\n",
+    "Se realiza la limpieza de datos en base a los objetivos que se tienen, por lo que en primera instancia eliminamos las columnas que no tienen mayor relevancia o que repiten información. Por un lado, hay variables relacionadas con las instituciones, en donde está el nombre, su ID, y distintas clasificaciones, de las cuales se escogen las que indican que tipo de establecimiento es, si está acreditada y si está adscrita a la gratuidad.\n",
+    "\n",
+    "Por otro lado, existen variables referidas a localidades y nombre del campus, en donde, al no realizarse un análisis specifico por sector, solo basta saber en que región se encuentra.\n",
+    "\n",
+    "Finalmente, hay variables sobre las carreras en si, como la mención, tipos de carreras, grados, tipo de moneda, costos, entre otras, de las cuales interesan el horario, tipo de carrera, el título y tipo de programa.\n",
+    "\n",
+    "Con esos criterios anteriores, de las 60 columnas iniciales, solo son de primer interes 41 que corresponden a :\n",
+    "'Año','Cód. Institución','Tipo Institución','Clasificación2', 'Clasificación3','Clasificación5','Orden Geográfico de la Región (Norte aSur)','Cód. Carrera','Carrera Genérica','Nombre Programa','Horario','Tipo Programa','Tipo Carrera','Duración (en semestres)','Título','Máximo Puntaje (promedio matemáticas y lenguaje)', 'Promedio Puntaje (promedio matemáticas y lenguaje)','Mínimo Puntaje (promedio matemáticas y lenguaje)', 'Puntaje de corte (primer seleccionado)','Puntaje de corte (promedio de la carrera)','Puntaje de corte (último seleccionado)','Máximo Puntaje NEM', 'Promedio Puntaje NEM', 'Mínimo Puntaje NEM', 'Máximo Puntaje Ranking','Promedio Puntaje Ranking', 'Mínimo Puntaje Ranking','Nº Alumnos Ingreso Via PSU o PDT','Nº Alumnos Ingreso Otra Via','Valor de matrícula', 'Valor de arancel', 'Valor del Título', 'Vacantes', 'Matrícula primer año hombres', 'Matrícula primer año mujeres','Matrícula primer año extranjeros','Matrícula total hombres','Matrícula Primer Año', 'Matrícula total mujeres', 'Matrícula total extranjeros','Matrícula Total'.\n",
+    "\n",
+    "Luego de este primer filtro, es necesario realizar una mayor limpieza. Como el objetivo es analizar la matrícula de mujeres en el primer año, es necesario que sean carreras de programa regular. En particular nos interesan las universidades y considerando que se implementa una nueva escala de puntajes en la PAES tambien es necesario filtrar años. Es por esto que se eliminan los datos que no tengan un programa regular, que no sean universidades y que el año sea anterior al 2023.\n",
+    "\n",
+    "Se observa que hay varias universidades que imparten un plan común para ingeniería en donde después de cierto tiempo se especializan, por lo que no existen matriculas de primer año en esas especializaciones. Como existe el dato de ingreso al plan común, solo nos quedamos con estos, eliminando todas las carreras que no tengan ingreso de mujeres en su primer año.\n",
+    "\n",
+    "En la misma línea de matriculas, hay carreras que en ciertos años solo ingresaron hombres o solo ingresaron mujeres, por lo que fue necesario rellenar estos datos nulos con la resta de la matricula total y la matricula del genero que ingresa. Esto es posible pues la matricula de extranjeros no está contabilizada en el total de matriculas.\n",
+    "\n",
+    "Una vez realizado todos los filtros anteriores, hay dos variables que se utilizaron para filtrar y que en este punto solo tienen un valor asociado, por lo qu para disminuir dimencionalidad se eliminan. Quedando un total de 39 columnas y 8084 filas.\n",
+    "\n",
+    "#### * Modelo\n",
     "\n",
     "### Clustering de carreras e instituciones\n",
     "Como se mencionó anteriormente, el conjunto de datos inicial no parece ser suficiente para responder las preguntas de agrupamiento. Por lo tanto, se decide utilizar una base de datos con información de los inmuebles de las instituciones de educación superior y que contiene varios identificadores en común con el conjunto inicial, facilitando la unión de registros entre ambos.\n",
@@ -546,6 +567,342 @@
     "]\n",
     "for column in interes2:\n",
     "    print(f\"Valores únicos de la columna {column}: \\n \\n{df[column].unique() } \\n \")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hito 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Regresión"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fuciones auxiliares para la limpieza \n",
+    "\n",
+    "def nulos(dataframe):\n",
+    "  \"\"\"\n",
+    "  Muestra la cantidad de nulos que tiene cada columna de un dataframe\n",
+    "  \"\"\"\n",
+    "  nulos_por_columna = dataframe.isnull().sum()\n",
+    "  print(nulos_por_columna)\n",
+    "\n",
+    "def unicos(dataframe):\n",
+    "  \"\"\"\n",
+    "  Muestra la cantidad de valores únicos que tiene cada columna de un dataframe\n",
+    "  \"\"\"\n",
+    "  unicos = dataframe.nunique()\n",
+    "  print(unicos)\n",
+    "\n",
+    "def valoresunicos(dataframe,col):\n",
+    "  \"\"\"\n",
+    "  Muestra los 10 primeros valores únicos que tiene una columna\n",
+    "  \"\"\"\n",
+    "  valores = dataframe[col].unique()\n",
+    "  print(col)\n",
+    "  i=0\n",
+    "  for val in valores:\n",
+    "    if i <11:\n",
+    "      print(f'\\t{val}')\n",
+    "      i+=1\n",
+    "    else:\n",
+    "      break\n",
+    "\n",
+    "def rellenar_nulo_m(dataframe,columna1,columna2,columna3):\n",
+    "  \"\"\"\n",
+    "  actualiza los valores de la columna 1 con la resta de las columnas 2 y 3\n",
+    "  \"\"\"\n",
+    "  null = dataframe[dataframe[columna1].isnull()]\n",
+    "  null[columna1] = null[columna3]-null[columna2]\n",
+    "\n",
+    "  dataframe.update(null)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\"En primera instancia nos interesa ver la matrícula de mujeres en carreras de ingeniería, \n",
+    "para esto solo nos quedamos con las carreras que contengan esta palabra clave\"\"\"\n",
+    "\n",
+    "df_ing = df[df['Carrera Genérica'].str.contains('Ingeniería')]\n",
+    "nulos(df_ing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unicos(df_ing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Notemos que existen columnas que repiten información y otras que no son relevantes para nuestro enfoque, \n",
+    "analizaremos un poco estas para decidir inicialmente que columnas conservar para después hacer una limpieza más profunda\"\"\"\n",
+    "\n",
+    "# Información de la institución\n",
+    "valoresunicos(df_ing,\"Tipo Institución\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta variable nos indica que tipo de institución es en la que se im parte la carrera, de esta podemos filtrar para enfocarnos en las universidades"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clasificaciones\n",
+    "valoresunicos(df_ing,\"Clasificación1\")\n",
+    "valoresunicos(df_ing,\"Clasificación2\")\n",
+    "valoresunicos(df_ing,\"Clasificación3\")\n",
+    "valoresunicos(df_ing,\"Clasificación4\")\n",
+    "valoresunicos(df_ing,\"Clasificación5\")\n",
+    "valoresunicos(df_ing,\"Clasificación6\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos ver que de estas variables:\n",
+    "* Clasificación1 es abarcada por Clasificación2, por lo que basta con quedarnos con la segunda pues entrega más información.\n",
+    "*Clasificación3 y Clasificación5 resultan interesantes analizar si impactan de alguna manera\n",
+    "* Clasificación4 y Clasificación6  no aporta información que queremos analizar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lugares\n",
+    "valoresunicos(df_ing,\"Nombre de la Sede\")\n",
+    "valoresunicos(df_ing,\"Comuna donde se imparte la carrera o programa\")\n",
+    "valoresunicos(df_ing,\"Nombre Region\")\n",
+    "valoresunicos(df_ing,\"Orden Geográfico de la Región (Norte aSur)\")\n",
+    "valoresunicos(df_ing,\"Nombre del Campus\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notemos que como no queremos hacer un análisis de las matriculas por sector específicos, basta con quedarnos con la variable que entrega la región, para facilitar despues el procesamiento de datos, es conveniente dejar la variable que ya trae las regiones en número.\n",
+    "\n",
+    "Por otro lado, el nombre que lleva el campus donde se imparte la carrera no entrega gran información a lo que buscamos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Información Carrera\n",
+    "valoresunicos(df_ing,\"Mención o Especialidad\")\n",
+    "valoresunicos(df_ing,\"Horario\")\n",
+    "valoresunicos(df_ing,\"Tipo Programa\")\n",
+    "valoresunicos(df_ing,\"Tipo Carrera\")\n",
+    "valoresunicos(df_ing,\"Título\")\n",
+    "valoresunicos(df_ing,\"Grado Académico\")\n",
+    "valoresunicos(df_ing,\"Tipo Moneda\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como solo nos iteresa analizar las carreras de ing en forma general, es decir, sin indagar en su especialización u area esta variable no nos interesa.\n",
+    "\n",
+    "La variable horario, Tipo Carrera y Título resultan ser interesantes de analizar\n",
+    "\n",
+    "El tipo de programa nos va a permitir filtrar las carreras que no son de ingreso regular,es decir, podremos quedarnos con las que están enfocadas a estudiantes que ingresan por primera vez a la educación superior\n",
+    "\n",
+    "Como los datos de valores de matricula, arancel y título están en pesos chilenos, la variable Tipo Moneda no nos interesa.\n",
+    "\n",
+    "Finalmente, el grado académico no nos aporta información relevante, pues buscamos las matriculas en carreras de ingeniería que incluso puedan no tener un grado.\n",
+    "\n",
+    "\n",
+    "De esta forma de las 60 columnas iniciales del dataset, solo nos interesan 41"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columnas = ['Año','Cód. Institución','Tipo Institución','Clasificación2', 'Clasificación3','Clasificación5','Orden Geográfico de la Región (Norte aSur)','Cód. Carrera','Carrera Genérica','Nombre Programa','Horario',\n",
+    "           'Tipo Programa','Tipo Carrera','Duración (en semestres)','Título','Máximo Puntaje (promedio matemáticas y lenguaje)', 'Promedio Puntaje (promedio matemáticas y lenguaje)',\n",
+    "           'Mínimo Puntaje (promedio matemáticas y lenguaje)', 'Puntaje de corte (primer seleccionado)','Puntaje de corte (promedio de la carrera)','Puntaje de corte (último seleccionado)',\n",
+    "           'Máximo Puntaje NEM', 'Promedio Puntaje NEM', 'Mínimo Puntaje NEM', 'Máximo Puntaje Ranking','Promedio Puntaje Ranking', 'Mínimo Puntaje Ranking','Nº Alumnos Ingreso Via PSU o PDT',\n",
+    "           'Nº Alumnos Ingreso Otra Via','Valor de matrícula', 'Valor de arancel', 'Valor del Título', 'Vacantes', 'Matrícula primer año hombres', 'Matrícula primer año mujeres',\n",
+    "           'Matrícula primer año extranjeros','Matrícula total hombres','Matrícula Primer Año', 'Matrícula total mujeres', 'Matrícula total extranjeros','Matrícula Total']\n",
+    "df_ing[\"Año\"] = df_ing[\"Año\"].dt.year\n",
+    "\n",
+    "ing = df_ing[columnas]\n",
+    "ing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora, debemos hacer el filtro de instituciones, tipo de programa y años. Para ello queremos las carreras enfocadas en alumnos que ingresan por primera vez a la educación superior, en particular a Universidades que pidan puntaje para ingresar. Notemos además que los puntajes del año 2023 están a una escala distinta de los años anteriores, por lo que esta tendremos que eliminarla para no alterar resultados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ing = ing[(ing['Tipo Programa']=='Programa Regular')&(ing['Tipo Institución']=='Univ.')&(ing['Clasificación2']!='(d) Universidades Privadas')&(ing['Año']<2023)]\n",
+    "nulos(ing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nuestro objetivo es analizar la matricula de mujeres en primeros años, se sabe que en muchas universidades las carreras de ingeniería primero pasan por un plan común, por lo que cuando se especualizan no tienen matriculas en primer año, estas carreras debemos eliminarlas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sin_matricula_primer = ing[(ing[\"Matrícula Primer Año\"]==0)]\n",
+    "\n",
+    "# eliminamos las carreras que no tienen matrículas en primer año\n",
+    "merged = pd.merge(ing, sin_matricula_primer, how='left', indicator=True)\n",
+    "ing_fin = merged[merged['_merge'] == 'left_only'].drop(columns='_merge')\n",
+    "nulos(ing_fin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Veamos que sucede con los nulos de matriculas de primer año de mujeres y hombres\"\"\"\n",
+    "ing_fin[(ing_fin[\"Matrícula primer año mujeres\"].isnull()) | (ing_fin[\"Matrícula primer año hombres\"].isnull())]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como la matrícula total de primer año no considera la matricula de extranjeros, es facil ver que podemos rescatar el valor de estos nulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rellenar_nulo_m(ing_fin,\"Matrícula primer año mujeres\",\"Matrícula primer año hombres\",\"Matrícula Primer Año\")\n",
+    "rellenar_nulo_m(ing_fin,\"Matrícula primer año hombres\",\"Matrícula primer año mujeres\",\"Matrícula Primer Año\")\n",
+    "\n",
+    "nulos(ing_fin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unicos(ing_fin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Como se realizaron filtros, ahora hay columnas que solo tienen 1 valor, por lo que combiene elimarlas y se procede a indicar los tipos de variables\"\"\"\n",
+    "ing_fin = ing_fin.drop([\"Tipo Institución\", \"Tipo Programa\"],axis=1)\n",
+    "ing_fin = ing_fin.astype({'Año': 'int64',\n",
+    "                    'Cód. Institución': 'category',\n",
+    "                    'Clasificación2': 'object',\n",
+    "                    'Clasificación3': 'object',\n",
+    "                    'Clasificación5': 'object',\n",
+    "                    'Orden Geográfico de la Región (Norte aSur)': 'int64',\n",
+    "                    'Cód. Carrera': 'category',\n",
+    "                    'Carrera Genérica': 'category',\n",
+    "                    'Nombre Programa': 'category',\n",
+    "                    'Horario': 'category',\n",
+    "                    'Tipo Carrera': 'category',\n",
+    "                    'Duración (en semestres)': 'float64',\n",
+    "                    'Título': 'category',\n",
+    "                    'Máximo Puntaje (promedio matemáticas y lenguaje)': 'float64',\n",
+    "                    'Promedio Puntaje (promedio matemáticas y lenguaje)': 'float64',\n",
+    "                    'Mínimo Puntaje (promedio matemáticas y lenguaje)': 'float64',\n",
+    "                    'Puntaje de corte (primer seleccionado)': 'float64',\n",
+    "                    'Puntaje de corte (promedio de la carrera)': 'float64',\n",
+    "                    'Puntaje de corte (último seleccionado)': 'float64',\n",
+    "                    'Máximo Puntaje NEM': 'float64',\n",
+    "                    'Promedio Puntaje NEM': 'float64',\n",
+    "                    'Mínimo Puntaje NEM': 'float64',\n",
+    "                    'Máximo Puntaje Ranking': 'float64',\n",
+    "                    'Promedio Puntaje Ranking': 'float64',\n",
+    "                    'Mínimo Puntaje Ranking': 'float64',\n",
+    "                    \"Nº Alumnos Ingreso Via PSU o PDT\": 'float64',\n",
+    "                    \"Nº Alumnos Ingreso Otra Via\": 'float64',\n",
+    "                    \"Valor de matrícula\": 'float64',\n",
+    "                    \"Valor de arancel\": 'float64',\n",
+    "                    \"Valor del Título\": 'float64',\n",
+    "                    \"Vacantes\": 'float64',\n",
+    "                    \"Matrícula primer año hombres\": 'float64',\n",
+    "                    \"Matrícula primer año mujeres\": 'float64',\n",
+    "                    \"Matrícula primer año extranjeros\": 'float64',\n",
+    "                    \"Matrícula Primer Año\": 'float64',\n",
+    "                    \"Matrícula total hombres\": 'float64',\n",
+    "                    \"Matrícula total mujeres\": 'float64',\n",
+    "                    \"Matrícula total extranjeros\": 'float64',\n",
+    "                    \"Matrícula Total\": 'float64'})"
    ]
   }
  ],
